# draft-type

./: .clang-format  CMakeLists.txt  README.md
assets/hershey-fonts/: cyrilc_1.jhf  greekc.jhf  greeks.jhf  license.txt  scripts.jhf
assets/images/: futural.ppm
example/: main.cpp
include/: draft-type.h
include/draft-type/: glyph.h  hershey.h  shaper.h
src/: glyph.h  hershey.cpp  hershey.h  shaper.cpp  shaper.h
